Source/WebKit2/WebProcess/Network/WebResourceLoader.cpp
@@ -106,6 +106,13 @@ void WebResourceLoader::didReceiveResponseWithCertificateInfo(const ResourceResp
     Ref<WebResourceLoader> protect(*this);
 
     ResourceResponse responseCopy(response);
+
+#if USE(QUICK_LOOK)
+    setUpQuickLookHandleIfNeeded(response);
+    if (QuickLookHandle* quickLookHandle = m_coreLoader->quickLookHandle())
+        responseCopy = ResourceResponse(quickLookHandle->nsResponse());
+#endif
+
     // FIXME: This should use CertificateInfo to avoid the platform ifdefs. See https://bugs.webkit.org/show_bug.cgi?id=124724.
 #if PLATFORM(COCOA)
     responseCopy.setCertificateChain(certificateInfo.certificateChain());
@@ -126,12 +133,26 @@ void WebResourceLoader::didReceiveResponseWithCertificateInfo(const ResourceResp
 void WebResourceLoader::didReceiveData(const IPC::DataReference& data, int64_t encodedDataLength)
 {
     LOG(Network, "(WebProcess) WebResourceLoader::didReceiveData of size %i for '%s'", (int)data.size(), m_coreLoader->url().string().utf8().data());
+
+#if USE(QUICK_LOOK)
+    if (QuickLookHandle* quickLookHandle = m_coreLoader->quickLookHandle()) {
+        RetainPtr<CFDataRef> rawData = adoptCF(CFDataCreateWithBytesNoCopy(0, data.data(), data.size(), kCFAllocatorNull));
+        if (quickLookHandle->didReceiveData(rawData.get()))
+            return;
+    }
+#endif
     m_coreLoader->didReceiveData(reinterpret_cast<const char*>(data.data()), data.size(), encodedDataLength, DataPayloadBytes);
 }
 
 void WebResourceLoader::didFinishResourceLoad(double finishTime)
 {
     LOG(Network, "(WebProcess) WebResourceLoader::didFinishResourceLoad for '%s'", m_coreLoader->url().string().utf8().data());
+
+#if USE(QUICK_LOOK)
+    QuickLookHandle* quickLookHandle = resourceLoader()->quickLookHandle();
+    if (quickLookHandle && quickLookHandle->didFinishLoading())
+        return;
+#endif
     m_coreLoader->didFinishLoading(finishTime);
 }
 
@@ -139,6 +160,10 @@ void WebResourceLoader::didFailResourceLoad(const ResourceError& error)
 {
     LOG(Network, "(WebProcess) WebResourceLoader::didFailResourceLoad for '%s'", m_coreLoader->url().string().utf8().data());
     
+#if USE(QUICK_LOOK)
+    if (QuickLookHandle *quickLookHandle = resourceLoader()->quickLookHandle())
+        quickLookHandle->didFail();
+#endif
     m_coreLoader->didFail(error);
 }
 
